# ChangeLog for sys-process/numactl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/numactl/ChangeLog,v 1.38 2014/11/12 14:56:05 jlec Exp $

  12 Nov 2014; Justin Lecher <jlec@gentoo.org> numactl-2.0.10.ebuild,
  metadata.xml:
  Fix double PREFIX installation

  06 Oct 2014; Lars Wendler <polynomial-c@gentoo.org> Manifest:
  Upstream re-released the source tarball.

*numactl-2.0.10 (06 Oct 2014)

  06 Oct 2014; Lars Wendler <polynomial-c@gentoo.org> -numactl-2.0.7-r2.ebuild,
  -numactl-2.0.8-r1.ebuild, +numactl-2.0.10.ebuild,
  -files/numactl-2.0.7-static_libs.patch:
  Version bump. Removed old.

  25 Jun 2014; Mike Frysinger <vapier@gentoo.org> numactl-2.0.9.ebuild:
  Explicitly mask arm platforms.

  12 Apr 2014; Mike Frysinger <vapier@gentoo.org> numactl-2.0.9.ebuild:
  Add ia64 love.

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> numactl-2.0.9.ebuild:
  Stable for ppc64, wrt bug #474314

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> numactl-2.0.9.ebuild:
  Stable for ppc, wrt bug #474314

  02 Mar 2014; Agostino Sarubbo <ago@gentoo.org> numactl-2.0.9.ebuild:
  Stable for x86, wrt bug #474314

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> numactl-2.0.9.ebuild:
  amd64 stable, bug #474314

*numactl-2.0.9 (05 Jan 2014)

  05 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> -numactl-2.0.2.ebuild,
  -numactl-2.0.5.ebuild, -numactl-2.0.7.ebuild, -numactl-2.0.8.ebuild,
  +numactl-2.0.9.ebuild, -files/numactl-2.0.2-build.patch,
  -files/numactl-2.0.5-protos.patch, +files/numactl-2.0.9-testsuite_fix.patch:
  Version bump. Removed old.

*numactl-2.0.8-r1 (20 Apr 2013)

  20 Apr 2013; Mike Frysinger <vapier@gentoo.org>
  +files/numactl-2.0.8-cpuid-pic.patch, +numactl-2.0.8-r1.ebuild:
  Fix building as PIEs on x86 #456238 by Maxim Kammerer.  Fix build of numastat
  #466108 by Lars Wendler.

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> numactl-2.0.7-r2.ebuild:
  Stable for ppc64, wrt bug #458206
