@@ -1,31 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX numactl-2.0.8-cpuid-pic.patch 697 SHA256 fc6d5e058ceb1953665fe67ec893a575b51c4cdd43a11117fb416bb88ad45459 SHA512 d9624110a7f8459c13b67eb990f05bc54ffe55818d586691b307dcc4ca5861f064a7269f1038cba5f8abf0f2b6d359d30e4f8d6e904a7e5c0da3404ef1bd4d51 WHIRLPOOL a59de11f4784636d618774f1a660eed3a534225e85881a036b13a59ec28823813b224081dffb9ab5870f7cf3bf4155bb0c92abc317dd3955fed8ab266f8d299d
 AUX numactl-2.0.8-static_libs.patch 2761 SHA256 ff8abe7defc4fde1f2bd380ccb0df3990ea57ddfcafd07cde6327820c667be16 SHA512 828dbcd719671c8ca81745d5670d48c071a8b353b9e42bbbaf9eeffd41b607a53ae24ddd6f0be422a2e6f61899635228da0926d7d8dedd143f52fde5bc5dbe05 WHIRLPOOL fd8f1dcc105b6cec190cd767a0c9bf2b3f556b541637e88c8ec718973732108bac3eec8cc1bcb5394c2f882b972b37d6234b016b2bbc3d8e1faa1372eb13e60c
 AUX numactl-2.0.9-testsuite_fix.patch 262 SHA256 2b857d892f99fb93e2fb961ac08f054d60b0c9a93331226e866d6bb66b7c4417 SHA512 8b9d952076eb04f0093d25c87f25e3f68f9a02a96daa4b574414f75092ded757fd587419584e8ea1883c0881aa2d462cf04904a479c0a925784e111e4b95a6c8 WHIRLPOOL 9d996e854e68d610658e0a0853ee4be9ea5aa30dc4ced8db0a55689c5d8d3235af54102744704b0480d1d8213f814dbe5b8792479ac7e90cce1de2597747bb02
 DIST numactl-2.0.10.tar.gz 98999 SHA256 9d197fefac81c73dc2b2e554f1758b2ec56d4e9b2f04a7f45dff5d6cb14fb9ce SHA512 3a82b28bbc724a2340950ac33396055da852ee06e5b1d3414cd83dd6f9e26fbb648faae35ce4009c76d6a180f3067a8f3fb18e3ffaa6b6db68adfc0877e94975 WHIRLPOOL 59a172c14d96b01b1e13d2913f6f820d4f9bacb2f80e2920d4350273ff01ab57d56ab4a163fde2df3898c4b7cf204bd4a333c99f9feb9d5bcd89fea799a3d2db
 DIST numactl-2.0.9.tar.gz 341455 SHA256 9ca033e6c14c0f26c20379b0cf9299429fd5a354a79c3c7880fd41ef69f7751c SHA512 483cbb1607da0f3bf0923202ea565100ea430b19502bdbd322f043f75dc945cc0f47878c0ed28badab23561c37da0b04aa12d07656bb4666c4f8d02a0d256407 WHIRLPOOL 5aba5b4a6ab0a4f06a2266054fdc7be8ca81696cf417e4fa4d10667ab95195edc5e002551a3bda4ea1eb25caf01d171ed18a16e4c29960902546aa78d7b93d73
+EBUILD numactl-2.0.10-r1.ebuild 1389 SHA256 5629b7f55ae4e8e24eb724e9d0b2c109bf57c1c265d48f965e635888868e7a67 SHA512 f88891e85631d090b506e52600d0a362b7966305a7bf7191b9a4678eb56f1a08eaf37031355dd688e40febf18699c7217be0b6d25c2f39f8f859a406c50c206f WHIRLPOOL a39f9d6c99df4c6fae850ee437a68c3c8862f2f40ae1ed33a41eb900b6e9a7f4cb586d09c5f1812cbf2633589f32324a36fe2522433cf3dcde551a0fd41651ab
 EBUILD numactl-2.0.10.ebuild 1124 SHA256 38623ee37c72aa42630f28b26ab2cd4cecd7f3da3723f83315b5d49484f94c51 SHA512 75173c0981932d2c04a4e592ca587cf0c4bed6ef9cf169d91dae30892fab7b5ae708deb680228de42ab83a24fb40f3bd299e99d468209f6501ffef2cd2d92cc2 WHIRLPOOL 31985f4eafe08a0314be681d33fb779a78feeec27b7330d1a8bc1936561dcc54d7d0dfee7d51fd5e160902511a20f0c96254fb3a3ae4b0ec6745f2959012042b
 EBUILD numactl-2.0.9.ebuild 1623 SHA256 54faa94fed3daa3afb0e4788a95eb12c3a013359db4697fb40c9b9351072b231 SHA512 2581d213395cc4cebffcedcbf5c25a0a5772aa8f49274a1456653c7e06603ecdf4f33f8784184cb5d88f8d9b3635ae3247efa0f884e1572a6b4913f777dd288c WHIRLPOOL 86cf9001e6d451ca7ffe2a079839cbdcb9b067c864df7cb32527f9f0f7f250e620f898c8bd0abe1bde5edaa0b7ae1e4bad7f42392e7ab75a3d43dd6669eb7ff1
-MISC ChangeLog 5788 SHA256 197870e715339eb2768c0f4e8e135b45ce38231d302fdaf1fde641d3d4f2eea1 SHA512 d1aaffc960b646caf4f7c642563418280e02dc8a02ea65993d6255a704a9049f56559abf35ad1bdea98b0981b90792e2bc88cee018cc74753b49d47d66bd070c WHIRLPOOL 0e3bd90e3780d79343966e445406ac236490afa8e64ac44dfad81ee5b04f1f5ef11f5341506037f703e43144b6741befaa43ef9a31c4b060736228436f4ecee5
+MISC ChangeLog 5945 SHA256 edcb75dbc8339ea6602ec170742d6b145058c9e6a1ab594f7d1ffc594512bc48 SHA512 b707e6c54f480fd52cebd51b1f63bd2d6f51ab83180c0f439da151fa956fc3ee010199c4dfd612ee027c389d234216657be0731affcba38f811d56ecd51c5b6f WHIRLPOOL 8f7c8bf3e803bd19d53c83db08bf7b4ece24ce894e5ebefc4be4237a0ac955a4e33122525211f83bf8c709b0283f6c9fc916ea1ea9020638ca26bed54e33fead
 MISC metadata.xml 166 SHA256 a33d3505ea834e19cd196ef8af9d438f1e476abb2aca27b0ea9f1219e93b8b26 SHA512 9a924987983984221311fc13539b270e032c8a18bfb2e863480dd4be10d36f3ec22d6824cc443c4dcbd34a6a0abce33ba70eeb90766122e072d442216af4f8dc WHIRLPOOL c28ad7db1ab0447a86899c0b1e504795754cc1ac75250e1b81ddb3ea1ea318abdeca1712695d18f8a12ff8b72e73b4cefef35adc05eb15a448aff88e7bd4b330
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJUY3UGXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirI28P/jm+W8IUiEVj43Pwtow+NVC4
-C5wrqs6ErlF7LAoiPN9BXkqQkHCeQ67El8pzF+PCRzNoWkrnkM2gSXrpCzSVhXmZ
-pAaUKWpYrlosseMsW2KMwa4GJEOizFlNnQm3pP4ZY904V/h4YvkIN1c5EMjD//5q
-IPt2Mte/r8lPCAqDjs3wKutzC8sM+7/VvguKYeqxvfwtu+DprW6rJtXD8LvoDfYv
-Bxq45D8dHQ7+qKTI8XekiANwYZ07TXPhNqsVONi5TFK55YCqy1VcyaTjsc5l15YK
-tokLFwnlOn78u/vPix5mpNLMTt5gKMn+ccEyuCePpkxUovp0FRruUfhXglr5glM2
-Sb8bsKE2ADaWdIa8VF8cMTzUYDjsOSxm0ncW7Ll6KjHOueq01dLxbdU05zwprB+F
-OlAARrbm5XSvPVOLa75Gv4RUl6rKZRHobMzFOaO+Uj5+rQF24GCg+DynwHXN2XOJ
-Mzr6bUGIh7NTrzujI1ljUJ4Te4WZsipgF4PEbpETTuGr4wc9G7WawY2/tja3PkOZ
-CNj/ajbdMsQoeXUquLD3VIzvWQs776kcQVmAAHnvePfG7zkCqWx6nhrUd1EGT5D2
-hQuXbwdJoI+AtMV4SiePDbex9nxuV3Ci/tyXdQMbepfHpGy+uWpEbfPeT3vZWE05
-GAi48XvwUbTuLwCHJ3wm
-=zgjh
+iQEcBAEBCAAGBQJU5qBVAAoJEOeBhlrCAAWGPswH/As61PCJJm3W7lW5PrhG4ejx
+aSqa0wf3bjJxgIoZ6ej9UmCnwZK4YIlM4Ol9Dfn8+OYK5wLXBLIvZpdhPUihn7fP
+QDZ814ABUXN+WRQhxfsXjD2KyiWSkTpaEWBq5nHQp0nXmUkW4bIcM/kVhAtqJxdw
+Es1LJSnua93n7HGQA6gks/mGHzmUtR4/YuzkcJRULnGaMWZic1PLnL4YXDClnPbj
+KbF0qJfCvCyB6/KXwe18BiO9ay+6cGiiFlUw+P2sw2UIK4k+6mo73wFPsBTjBolP
+Pd8BaDX27kH6xfR2KUA3DS6pbyL8CAGvfon8Za0MmVvx55DTAV7xbooEohMGI0Y=
+=CKa+
 -----END PGP SIGNATURE-----
